--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -1,5 +1,8 @@
 body {
   background-image: url(http://res-5.cloudinary.com/hp20rcdax/image/upload/f_auto,q_90/v1/backgrounds/rbepbw8y5za1qhn0n4i3);
+}
+body,
+html {
   height: 100%;
 }
 .banner {
@@ -20,6 +23,9 @@ body {
 }
 .container .col-xs-12 {
   padding: 0px;
+}
+#home {
+  position: relative;
 }
 @keyframes start {
   from {
@@ -50,13 +56,13 @@ body {
   -webkit-transition: top 0.5s, left 0.5s, width 0.5s, height 0.5s;
 }
 #home .grid-container {
-  height: 100%;
+  min-height: 100%;
   margin-top: 120px;
-  overflow-y: scroll;
+  overflow-x: scroll;
   z-index: 30;
 }
 #home .grid-container .free-wall {
-  margin: 15px 50px;
+  margin: 15px 0px;
   float: left;
   width: 6000px;
 }
@@ -67,9 +73,6 @@ body {
 }
 #home .grid-container .free-wall .folder input {
   max-width: 95%;
-}
-#home .grid-container .free-wall .brick {
-  background: rgba(126, 176, 219, 0.2);
 }
 #home .grid-container .free-wall .brick img {
   height: 100%;
@@ -107,13 +110,6 @@ body {
 }
 #home .grid-container .free-wall .brick .icon-menu .add-dropdown:hover .add-flyout {
   display: block;
-}
-#home .grid-container .free-wall .brick .widget {
-  height: 100%;
-  overflow-y: scroll;
-}
-#home .grid-container .free-wall .brick .widget .rss-feed {
-  max-height: 100%;
 }
 #home #trash {
   background-color: rgba(0, 0, 0, 0.6);
@@ -195,33 +191,21 @@ body {
 }
 #home #app-tray {
   bottom: 0;
-  position: fixed;
+  width: 100%;
   z-index: 30;
-}
-#home #app-tray #grid-pagination {
-  margin: -24px 0px 0px 0px;
 }
 #home #app-tray #grid-pagination ul li {
   color: darkgrey;
+  font-size: 24px;
   opacity: .8;
 }
 #home #app-tray #grid-pagination ul li:hover {
   opacity: .4;
 }
-#home #app-tray #grid-pagination ul #left-slow {
-  -ms-transform: rotate(180eg);
-  /* IE 9 */
-  -webkit-transform: rotate(180deg);
-  /* Chrome, Safari, Opera */
-  transform: rotate(180deg);
-}
 #home #app-tray .free-wall .folder {
   background-color: #23789e !important;
   content: "Folder";
   text-align: center;
-}
-#home #app-tray .free-wall .brick {
-  background: rgba(126, 176, 219, 0.2);
 }
 #home #app-tray .free-wall .brick img {
   height: 100%;
@@ -518,7 +502,8 @@ p {
 }
 .widget .rss-feed {
   height: 100%;
-  max-height: 200px;
+  max-height: 318px;
+  min-height: 318px;
   overflow-y: scroll;
 }
 .widget .rss-feed ul {
