--- a/public/styles/widget.less
+++ b/public/styles/widget.less
@@ -9,7 +9,8 @@
 
   .rss-feed {
     height: 100%;
-    max-height: 200px;
+    max-height: 318px;
+    min-height: 318px;
     overflow-y: scroll;
 
     ul {
